fix ipad height clipping

--- a/client/public/css/BulmaSass.scss
+++ b/client/public/css/BulmaSass.scss
@@ -220,9 +220,22 @@ img.commentPhotos {
   }
 
   .main .column.posts {
-    height: calc(var(--bodyHeight, 1vh) * 1 - 3.5rem);
+    height: calc(var(--bodyHeight, 1vh) * 1 - 5.5rem);
   }
+
+  .main .column.events {
+    height: calc(var(--bodyHeight, 1vh) * 1 - 5rem);
+    margin-top: .6em;
+    }
+
+  div.column.events>div {
+    position: relative;
+    height: 100%;
+  }
+
 }
+
+
 
 @media only screen and (max-width: 768px) {
   #newUserForm {
